# MPORG

./: .cache  CHANGELOG.md  README.md  audio_fingerprinter.py  main.py  organizer.py  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  spotify_searcher.py
.github/workflows/: python-app.yml
lyrics_searcher/: api.py  cli.py  lyric_finder.py  utils.py
lyrics_searcher/lyricsgenius/: __init__.py  __main__.py  genius.py
mporg/: __init__.py  audio_fingerprinter.py  main.py  organizer.py  spotify_searcher.py  types.py
mporg/credentials/: credentials_manager.py  providers.py
mporg/logging_utils/: custom_handlers.py  logging_setup.py
mporg/plugins/: __init__.py  plugin_loader.py  util.py  utils.py
plugins/FingerprinterPlugins/: MBFingerprinterPlugin.py
plugins/FingerprinterPlugins/ACRCloudFingerprinterPlugin/: ACRCloudFingerprinterPlugin.py  README.md  plugin.json
plugins/FingerprinterPlugins/MBFingerprinter/: MBFingerprinterPlugin.py  README.md  plugin.json
tests/: main.py  org_tests.py  test_org.py  utils.py
