[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MPORG"
dynamic = ["version"]
description = "Python tool to organize music files based on metadata"
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ['organizer', 'music', 'tag', 'mporg', 'mp3', 'wav', 'wma', 'm4a']
authors = [{name = "Drag", email = "juserysthee@gmail.com"}, {name = "Justin Erysthee"}]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities"
]
dependencies = [
    'diskcache~=5.6.1',
    'ftfy~=6.1.1',
    'musicbrainzngs~=0.7.1',
    'mutagen~=1.46.0',
    'pyacoustid~=1.2.2',
    'spotipy~=2.23.0',
    'pyacrcloud~=1.0.1',
    'tqdm~=4.65.0'
]

[project.optional-dependencies]
tests = [
    'coverage~=7.2.5',
    'parameterized~=0.9.0'
]

[project.scripts]
mporg = "mporg.main:main"

[tool.setuptools]
packages = ['mporg', 'mporg.credentials', 'mporg.logging_utils', 'mporg.plugins']

[tool.setuptools.dynamic]
version = {attr = "mporg.VERSION"}