[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MPORG"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Python tool to organize music files based on metadata"
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ['organizer', 'music', 'tag', 'mporg', 'mp3', 'wav', 'wma', 'm4a']
authors = [{name = "Drag", email = "juserysthee@gmail.com"}, {name = "Justin Erysthee"}]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities"
]

[project.scripts]
mporg = "mporg.main:main"

[tool.setuptools]
packages = ['mporg', 'mporg.credentials', 'mporg.logging_utils', 'mporg.plugins']

[tool.setuptools.dynamic]
version = {attr = "mporg.VERSION"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {file = ["requirements_tests.txt"]}